# P2P

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
common/config/: settings.py
common/observability/: logging.py
common/schemas/: __init__.py  workflow.py
infra/docker/: nginx.conf
infra/mongodb-init/: init.js
services/approval_payment_service/: Dockerfile
services/approval_payment_service/app/: main.py
services/extract_agent_service/: Dockerfile
services/orchestrator_service/: Dockerfile
services/orchestrator_service/app/: main.py
services/query_writer_service/: Dockerfile
services/sla_agent_service/: Dockerfile
services/validation_agent_service/: Dockerfile
tests/: test_health_contract.py
