[project]
name = "agentic-p2p-platform"
version = "0.1.0"
description = "Enterprise-grade Agentic AI Procurement Automation System"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "motor>=3.5",
  "python-json-logger>=2.0",
  "tenacity>=9.0"
]

[project.optional-dependencies]
ai = [
  "langchain>=0.3",
  "langgraph>=0.2",
  "crewai>=0.80",
  "pyautogen>=0.3",
  "openai>=1.40",
  "langfuse>=2.42"
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
